Enhance UI with glassmorphism effects and improve accessibility features

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -21,7 +21,7 @@
       <form id="bugForm" autocomplete="off">
         <div class="form-grid">
           <label class="field full">
-            <textarea name="user_input" rows="8" placeholder="Describe the bug you encountered..." required></textarea>
+            <textarea name="user_input" rows="8" placeholder="Describe what you encountered..." required></textarea>
             <button type="reset" class="btn-clear">Clear</button>
           </label>
         </div>
