--- a/src/static/index.html
+++ b/src/static/index.html
@@ -61,7 +61,7 @@
           <div class="flex items-start justify-between gap-3">
             <div>
               <h2 class="text-sm font-medium text-slate-800">Generated report</h2>
-              <p class="text-xs text-slate-500 mt-1">Copy, download or refine before sending to devs.</p>
+              <p class="text-xs text-slate-500 mt-1">Copy or download before sending to devs.</p>
             </div>
             <div class="flex items-center gap-2">
               <button id="copyBtn" class="text-sm px-3 py-1 rounded-md border border-slate-200 bg-white hover:bg-slate-50">Copy</button>
